...

  return (
    <ScreenContainer>
      <Header title="Discover" />
      <ScrollContainer ref={discoverRef} showsVerticalScrollIndicator={false}>
        <SearchButton onPress={goToSearch}>
          <Icon name="search" size={21} color="primary500" />
          <Text
            color="neutral300"
            size={14}
            mh={6}
            mv={6}
            testID={getTestId('search-whiskey-people-places')}
          >
            Search whiskey, people, places, etc.
          </Text>
        </SearchButton>
        <Content>
          <TastingEventCard />
          <NearbyPlaces
            setSelectedVenue={setSelectedVenue}
...
