...
  WhiskeyType,
} from './graphQlTypes';

export const WhiskeyTypes: SelectProps['options'] = [
  { label: 'American', value: WhiskeyType.AMERICAN },
  { label: 'Bourbon', value: WhiskeyType.BOURBON },
  { label: 'Canadian', value: WhiskeyType.CANADIAN },
  { label: 'Flavored', value: WhiskeyType.FLAVORED },
  { label: 'Irish', value: WhiskeyType.IRISH },
  { label: 'Japanese', value: WhiskeyType.JAPANESE },
  { label: 'Rye', value: WhiskeyType.RYE },
  { label: 'Scotch', value: WhiskeyType.SCOTCH },
  { label: 'American Single Malt', value: WhiskeyType.SINGLE_MALT_AMERICAN },
...
